@@ -1,3 +1,8 @@
+2009-08-03  Janis Johnson  <janis187@us.ibm.com>
+
+	PR c/39902
+	* gcc.dg/dfp/pr39902.c: New test.
+
 2009-07-29  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* gcc.dg/builtins-config.h (HAVE_C99_RUNTIME): Do not define
